--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -6,6 +6,7 @@
     <head>
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="{% static 'css/footer.css' %}">
+        <link rel="stylesheet" href="{% static 'css/toggle-switch.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap-min.css' %}">
         <link rel="stylesheet" href="{% static 'css/jquery-data-tables.css' %}">
         <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.5.2/css/buttons.dataTables.min.css">
@@ -13,6 +14,7 @@
         <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
         <link rel="stylesheet" href="{% static 'css/jquery-ui.structure-all.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/jquery-ui-all.theme.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/bootstrap-switch.min.css' %}">
         <link rel="shortcut icon" href="{% static 'Images/mini-logo.ico' %}">
         <script>
                 function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -131,10 +133,12 @@
         <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js"></script>
         <script src="{% static 'js/bootstrap-min.js' %}"></script>
         <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap-switch.min.js' %}"></script>
         <script src="{% static 'js/back-to-top.js' %}"></script>
         <script src="{% static 'js/card-overlay.js' %}"></script>
         <script>$('[data-toggle="tooltip"]').tooltip({container:'body'});</script>
         <script src="{% static 'js/jquery-ui-all.min.js' %}"></script>
+
 
 
         <!-- This function registers a "click event" on a small-searchpanel and
