--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -350,7 +350,12 @@
                 </div>
 
 
-                
+                <hr>
+                <div id="editor-done-btns" class="center-btn">
+                    <div id="editor-cancel" class="btn btn-default"> Cancel </div>
+                    <div class="space"></div>
+                    <div id="editor-save" class="btn btn-danger">Save</div>
+                </div>
             </div>
         </div>
     </div>
