--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,8 @@
 /* BASE HTML */
 /* ----------------------------- */
 /* BASE CONTAINERS */
+
+body { font-size: 12px; }
 #page-container {
     position: absolute;
     background-color: #E7E7E7;
@@ -64,7 +66,40 @@ h1, h2, h3, h4, h5, h6 {
     padding-bottom: 4px;
     background-color: #c45ca2;
     color: white;
+    font-weight: bolder;
+    border-radius: 4px;
 }
+
+
+.bg-official-light {
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    color: #c45ca2;
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+.bg-official-small {
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    color: #c45ca2;
+    font-size: 12px;
+    font-weight: bolder;
+}
+
+.bg-homolog {
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    color: #6785d0;
+    font-weight: bolder;
+}
+
 
 .company-logo:hover {
     opacity: 1;
@@ -259,16 +294,20 @@ h1, h2, h3, h4, h5, h6 {
     overflow: hidden;
     cursor: pointer;
     width: 70%;
-    margin: 5%;
+    margin-top: 25px;
+    margin-bottom: 25px !important;
+    border-width: 4px !important;
+    color:#31708f;
 }
 
+.small-searchpanel .panel-body { background-color: white; }
 .tutorial-icon-link {
     color: #777777;
 }
 
-.molecular_function { background-color: #D5A0E4; padding: 2px; color:white; }
-.cellular_component { background-color: #9DB9E6; padding: 2px; color:white; }
-.biological_process { background-color: #D7A070; padding: 2px; color:white; }
+.molecular_function { background-color: #D5A0E4; padding: 4px; color:white; border-radius: 4px; }
+.cellular_component { background-color: #9DB9E6; padding: 4px; color:white; border-radius: 4px; }
+.biological_process { background-color: #D7A070; padding: 4px; color:white; border-radius: 4px; }
 
 .tutorial-icon-link:hover {
     color: #777777;
@@ -301,6 +340,18 @@ h1, h2, h3, h4, h5, h6 {
 .genesearch-minitutorial{
     text-align: left;
     display: inline-block;
+}
+
+#genesearch-genesymbol {
+    width: 300px;
+    height: 41px;
+}
+
+.genesearch-panel .btn { height: 41px;}
+
+#select-experiment-div .btn { height: 41px;}
+#genesearch-form {
+    margin-top: 3%;
 }
 
 .pfam-line-table-tr {
@@ -370,9 +421,9 @@ h1, h2, h3, h4, h5, h6 {
     z-index: 80;
     background: white;
     padding-left: 80px;
-    padding-top: 40px;
+    padding-top: 20px;
     padding-right: 80px;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
     overflow: scroll;
     overflow-y: scroll;
     -webkit-box-shadow: 0px 0px 180px 120px rgba(0,0,0,0.75);
@@ -382,15 +433,14 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 12px;
 }
 
+.card-overlay h1 { font-size: 20px; }
+.card-overlay h2 { font-size: 18px; }
+.card-overlay h3 { font-size: 16px; }
+
 .close-overlay, #click {
     cursor:
     pointer;
 }
-
-
-.card-overlay h1 { font-size: 28px; }
-.card-overlay h2 { font-size: 22px; }
-.card-overlay h3 { font-size: 20px; }
 
 #button-container {
     position: fixed;
@@ -526,7 +576,8 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #F7F7F7;
     padding: 20px;
     overflow-y: scroll;
-    max-height: 150px;
+    max-height: 100px;
+    max-width: 800px;
 }
 
 .download-fasta {
@@ -732,14 +783,17 @@ h1, h2, h3, h4, h5, h6 {
 
 #cyt-explorer-icon {
     display: inline-block;
-    margin-top: 10%;
+    margin-top: 15px;
 }
 
 #select-layout-container {
     display: block;
     text-align: left;
-    padding-left: 20%;
     position: relative;
+}
+
+#select-layout-container .row {
+    height: 40px;
 }
 
 #select-layout-container h3 {
@@ -764,6 +818,7 @@ h1, h2, h3, h4, h5, h6 {
     top: 1%;
     position: relative;
     display: block;
+    padding-left: 10%;
 }
 
 .netexplorer-form {
@@ -870,7 +925,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #add-node-container {
     width: 60%;
-    margin-top: 5%;
+    margin-top: 5px;
     margin-left: 20%;
 }
 
@@ -901,7 +956,7 @@ h1, h2, h3, h4, h5, h6 {
 #map-expression-dialog {
     display: none;
     margin: 5%;
-    width: 60%;
+    width: 50%;
     height: 80%;
     z-index: 1000000000;
     position: fixed;
@@ -919,7 +974,7 @@ h1, h2, h3, h4, h5, h6 {
 #map-expression-dialog-header {
     position: fixed;
     background-color: #E9E9E9;
-    width: 58%;
+    width: 49%;
     height: 40px;
     margin-left: 0.5%;
     margin-top: 0.5%;
@@ -939,12 +994,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #map-expression-dialog-send {
-    float: right;
     display: inline-block;
-    margin-top: 200px;
-    bottom: 0;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    text-align: center;
+    position: fixed;
+    left: calc(55% - 360px);
+    width: 350px;
+    bottom: calc(5% + 80px);
+    height: 80px;
+    background-color: white;
+}
 }
 
 #exTab2 {
@@ -986,7 +1044,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #cyt-controls-header {
     width: 100%;
-    height: 420px;
+    height: 350px;
 }
 
 
@@ -1004,9 +1062,6 @@ input[type="file"] {
     width: 120%;
 }
 
-#upload-graph-form {
-    width: 52px;
-}
 
 #dialog-confirm {
     display: none;
@@ -1033,26 +1088,23 @@ input[type="file"] {
 #show-homologs-container {
     display: inline-block;
     width: 100%;
-    height: 10%;
     position: relative;
 }
 
 #show-homologs-container-title {
-    height: 100%;
+    height: 50px;
 }
 
 .show-homologs-label {
     width: 60%;
-    height: 70% !important;
     vertical-align: middle;
     cursor: pointer;
-    margin-top: 15%;
 }
 
 #show-homologs-toggle {
     display: inline-block;
-    height: 100%;
-
+    height: 50px;
+    margin-top: 10px;
 }
 
 #layout-dropdown {
@@ -1069,7 +1121,15 @@ input[type="file"] {
 
 #layout-toggle-btn {
     vertical-align: middle;
-    margin-top: 10%;
+    height: 100%;
+    line-height: 100%;
+    width: 60%;
+    display: block;
+}
+
+#cyt-controls hr { 
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .show-homologs-btn {
@@ -1447,6 +1507,10 @@ input[type="file"] {
     color: #777777;
 }
 
+.transcripts-table {
+    font-size: 12px;
+    color: #777777;
+}
 
 .pfam-line-table-td-scale {
     margin-right: 0 !important;
@@ -1722,8 +1786,8 @@ strong{
     padding: 8px;
     background-color: white;
     float: right;
-    margin-right: 15px;
-    margin-top: 15px;
+    margin-right: 5px;
+    margin-top: 5px;
     border-color: #cccccc;
     border-width: 1;
     border-style: solid;
@@ -1911,10 +1975,10 @@ kbd {
 }
 
 .user-in-controls {
-    padding-right: 15px;
+    padding-right: 5px;
     text-align: right;
     right: 5px;
-    margin-top: 15px;
+    margin-top: 5px;
 }
 
 
@@ -2022,6 +2086,13 @@ kbd {
     background-color: #f4f4f4; 
 }
 
+#volcano-plot {
+    display: inline-block; 
+    height: 500px; 
+    min-width: 700px; 
+    background-color: #f4f4f4; 
+}
+
 #plot-genenotfound { 
     display: none; 
     margin: auto;
@@ -2031,7 +2102,7 @@ kbd {
     background-color: #FDD4D4;
 }
 
-#tsneplot-genenotfound {
+#tsne-plot-genenotfound {
     display: none; 
     margin: auto;
     font-size: 18px;
@@ -2111,7 +2182,47 @@ kbd {
     height: 195px;
 }
 
+#planexp-network     { display: none; }
+#planexp-network-toc { display: none; }
+#planexp-cyt { background-color: #f4f4f4; width: 100%; height: 720px;}
 
+#planexp-cyt-wrapper {
+    position: relative;
+}
+
+#planexp-cyt-controls {
+    position: absolute; 
+    top: 25px;
+    right: 25px;
+}
+
+.color-pick { display: inline-block; opacity: 0.5; margin-top: 10px; height: 60px; width: 30px; }
+.color-pick:hover { opacity: 1; cursor: pointer; }
+
+.gradient-blue {  background-image: linear-gradient(#1f77b4, white); }
+.gradient-red {  background-image: linear-gradient(#d62728, white); }
+.gradient-green {  background-image: linear-gradient(#2ca02c, white); }
+.gradient-blue-to-red { background-image: linear-gradient(#d62728, white, #1f77b4) }
+.gradient-yellow-to-blue { background-image: linear-gradient(#1f77b4, white, #e4a32d); }
+.gradient-red-to-green { background-image: linear-gradient(#2ca02c, white, #d62728); }
+
+
+.color-pick.active { border: solid 2px #777777; opacity: 1; }
+
+
+#one-sample { text-align: center; }
+#two-sample { text-align: center; }
+
+#planexp-cyt-controls .nav-tabs { width: 100%; }
+
+.planexp-cyt-btn { margin-right: 10px; width: 90px; }
+.planexp-cyt-btn .glyphicon { color: #777777; font-size: 16px; }
+
+#planexp-cyt-controls h3 { font-size: 16px; font-weight: bold; }
+#planexp-cyt-controls h4 { font-size: 14px; }
+#planexp-cyt-controls .btn { font-size: 12px; }
+
+.minExp-container { text-align: center; }
 #planexp-summary-toc { display: none; }
 #planexp-dge-table-container-toc { display: none; }
 #planexp-gene-expression-toc     { display: none; }
@@ -2120,3 +2231,149 @@ kbd {
 .planexp-toc-link {
     width: 100% !important;
 }
+
+.human-select { background-color: #6785d0 !important; padding: 6px 6px !important; }
+.gene-select { background-color: #c45ca2 !important; padding: 6px 6px !important; }
+.human-color {color: #6785d0; }
+.jbrowser-subtitle { float:right; }
+
+.panel-genesearch { background-color: #d9edf7 !important ; font-size: 12px;}
+
+#kegg-funkyradio { margin-top: -10px; }
+
+.cyt-controls-subtitle { font-size: 24px; }
+
+summary:hover { cursor: pointer; opacity: 0.8; }
+
+#edit-graph-dialog {
+    display: none;
+    width: 90%;
+    height: 90%;
+    z-index: 1000000000;
+    position: fixed;
+    background-color: white;
+    border-color: #D4D4D4;
+    border-style: solid;
+    border-width: 2px;
+    top: 10;
+    left: 5%;
+}
+
+#edit-graph-dialog-header {
+    position: fixed;
+    background-color: #E9E9E9;
+    width: 89%;
+    height: 40px;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+    margin-top: 0.5%;
+    margin-bottom: 40px;
+}
+
+#close-edit-graph {
+    float: right;
+    cursor: pointer;
+}
+
+#close-edit-graph .glyphicon-remove {
+    line-height: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
+
+.edit-graph-title {
+    line-height: 40px;
+    height: 40px;
+    margin-left: 10px;
+    font-weight: bold;
+}
+
+#edit-graph-body {
+    display: grid;
+    height: 100%;
+    grid-column-gap: 5px;
+    grid-template-columns: 70% 30%;
+    grid-template-rows: 50px calc(100% - 50px);
+}
+
+#edit-graph-top-spacing {
+    grid-column: 1 / span 2;
+}
+
+#cytoscape-editor {
+    background-color: white;
+    border: solid 1px grey;
+}
+
+#cytoscape-editor-controls {
+    padding: 10px;
+    padding-top: 50px;
+}
+
+.vertical-sep {
+    display: inline-block;
+    width: 24px; 
+    height: 34px;
+    border-right: solid 1px #adadad;
+    margin-right: 24px;
+}
+
+#planexp-cyt-buttons {
+    display: flex;
+    align-items: center;
+}
+
+.center-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#editor-add-node-btn {
+    display: block;
+    margin-top: 4px;
+    width: 150px;
+}
+
+.editor-interaction {
+    width: 250px;
+}
+
+.switch-candy.editor-interaction a {
+    background-color: #d9534f;
+}
+
+
+
+.editor-delete-node {
+    width: 250px;
+}
+
+.switch-candy.editor-delete-node a {
+    background-color: #d9534f;
+}
+
+.editor-delete-interaction {
+    width: 250px;
+}
+
+.switch-candy.editor-delete-interaction a {
+    background-color: #d9534f;
+}
+
+.editor-switch:hover {
+    cursor: pointer;
+}
+
+.edgehandleCanvas {
+    top: 50px !important;
+}
+
+#editor-done-btns {
+    position: absolute;
+    bottom: 25px;
+    width: 30%;
+}
+
+#editor-cancel, #editor-save { width: 100px; }
+.space { width: 20px; }
