--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -1,9 +1,9 @@
 <html>
-    <meta charset="utf-8">
-    <meta name="description" content="Schmidtea mediterranea protein-protein interaction networks.">
     {% load staticfiles %}
-
+    
     <head>
+        <meta charset="utf-8">
+        <meta name="description" content="Schmidtea mediterranea protein-protein interaction networks.">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="stylesheet" href="{% static 'css/footer.css' %}">
         <link rel="stylesheet" href="{% static 'css/toggle-switch.css' %}">
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="{% static 'css/jquery-ui-all.theme.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap-switch.min.css' %}">
         <link rel="shortcut icon" href="{% static 'Images/mini-logo.ico' %}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <script>
                 function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
