--- a/NetExplorer/templates/NetExplorer/smesgene_card.html
+++ b/NetExplorer/templates/NetExplorer/smesgene_card.html
@@ -57,9 +57,10 @@
         <p>{{ node.sequence }}</p>
     </div>
 
+    <!-- jbrowse/index.html?data=dd_Smes_g4&loc={{ node.chromosome }}%3A{{ node.start }}..{{ node.end }}&tracks=RNA%2CSMESG%2Cdd_Smes_v1%2Cdd_Smed_v6&overview=1&highlight=&tracklist=0&highres=2 -->
     <h2><span class="glyphicon glyphicon-tag"></span> Gene location</h2>
     <hr class="h2-sep">
-    <iframe id="jbrowser" width="100%" height="400px" src="http://planmine-test.mpi-cbg.de:8088/jbrowse/?data=planmine%2Fjson&loc={{ node.chromosome }}%3A{{ node.start }}..{{ node.end }}&tracks=RNA%2CSMESG%2Cdd_Smes_v1%2Cdd_Smed_v6&overview=1&highlight=&tracklist=0&highres=2"></iframe> 
+    <iframe id="jbrowser" width="100%" height="400px" src="http://compgen.bio.ub.edu/"></iframe> 
     <div class="jbrowser-subtitle">Genomic visualization powered by <a href="http://planmine.mpi-cbg.de/" target="_blank">Planmine</a></div>
 
 
