--- a/NetExplorer/templates/NetExplorer/smesgene_card.html
+++ b/NetExplorer/templates/NetExplorer/smesgene_card.html
@@ -57,11 +57,13 @@
         <p>{{ node.sequence }}</p>
     </div>
 
+    dd_Smes_g4_4%3A7808816..7821766&tracks=refseq%2Cgenes&overview=1&highlight=&tracklist=0&highres=2
+
     <!-- jbrowse/index.html?data=dd_Smes_g4&loc={{ node.chromosome }}%3A{{ node.start }}..{{ node.end }}&tracks=RNA%2CSMESG%2Cdd_Smes_v1%2Cdd_Smed_v6&overview=1&highlight=&tracklist=0&highres=2 -->
     <h2><span class="glyphicon glyphicon-tag"></span> Gene location</h2>
     <hr class="h2-sep">
-    <iframe id="jbrowser" width="100%" height="400px" src="http://compgen.bio.ub.edu/"></iframe> 
-    <div class="jbrowser-subtitle">Genomic visualization powered by <a href="http://planmine.mpi-cbg.de/" target="_blank">Planmine</a></div>
+    <iframe id="jbrowser" width="100%" height="400px" src="https://compgen.bio.ub.edu/jbrowse/index.html?data=dd_Smes_g4&loc={{ node.chromosome }}%3A{{ node.start }}..{{ node.end }}&tracks=refseq%2Cgenes&overview=1&highlight=&tracklist=0&highres=2"></iframe> 
+    <div class="jbrowser-subtitle">Genomic location data from <a href="http://planmine.mpi-cbg.de/" target="_blank">Planmine</a></div>
 
 
     <h2><span class="glyphicon glyphicon-tag"></span> Transcripts</h2>
