--- a/NetExplorer/templates/NetExplorer/about.html
+++ b/NetExplorer/templates/NetExplorer/about.html
@@ -51,6 +51,19 @@
     <br>
     <h2 id="update-notes">Update Notes</h2>
     <hr>
+    
+    <h3>v1.2: January 23rd 2019</h3>
+    <ul class="update-notes-ul">
+        <li>Schmidtea mediterranea predicted genes (see: <a href="https://academic.oup.com/nar/article/47/D1/D812/5212006" target="_blank">A. Rozanski et al.</a>) as well as their associated transcripts have been included in PlanNET as SmesGene and Smest respectively.</li>
+        <li>A new gene card for Smesgenes has been implemented, with information regarding the associated transcripts across different transcriptomes, the genomic location, gene ontologies and predicted protein-protein interactions.</li>
+        <li>Several genomic features (such as mapped transcripts over <a href="https://www.nature.com/articles/nature25473" target="_blank">the newly assembled S.med genome</a>) can now be visualized using our new <a href="https://compgen.bio.ub.edu/jbrowse" target="_blank">JBrowse plugin</a>.</li>
+        <li><a href="{% url 'planexp' %}">PlanExp</a>, a PlanNET plugin for exploring RNA-seq experiments is available for registered users to test.</li>
+        <li>General improvements to design and readability of the application.</li>
+    </ul>
+
+    <br>
+    <br>
+
     <h3>v1.1: August 7th 2018</h3>
     PlanNET has been updated from version 1.0 (published version at <a href="https://academic.oup.com/bioinformatics/article/34/6/1016/4657068" target="_blank">Bioinformatics</a>) to version 1.1.
 
