--- a/NetExplorer/templates/NetExplorer/smesgene_card.html
+++ b/NetExplorer/templates/NetExplorer/smesgene_card.html
@@ -198,9 +198,15 @@
             </table>
         </div>
         
-    
+    <h2><span class="glyphicon glyphicon-tag"></span> External links</h2>
+    <hr class="h2-sep">
+    <ul>
+        <li>Search on <a href="http://planmine.mpi-cbg.de/planmine/keywordSearchResults.do?searchTerm={{ node.symbol }}&searchSubmit=GO" target="_blank">PlanMine</a>.</li>
+    </ul>
 
-    
+    <br>
+    <br>
+    <br>
 </body>
 
 <script src="{% static 'js/root.js' %}"></script>
