--- a/static/css/style.css
+++ b/static/css/style.css
@@ -246,7 +246,7 @@ h1, h2, h3, h4, h5, h6 {
 .app-icon-inside {
     position: relative;
     margin-top: 4%;
-    width: 180;
+    width: 150px;
     right: -30px;
 }
 
@@ -1044,7 +1044,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #cyt-controls-header {
     width: 100%;
-    height: 350px;
+    height: 320px;
 }
 
 
