Color gradient skeleton. Gradient colors are not correct.

--- a/NetExplorer/templates/NetExplorer/planexp.html
+++ b/NetExplorer/templates/NetExplorer/planexp.html
@@ -246,9 +246,9 @@
                                 </select>
                                 <br>
 
-                                <div id="gradient-red" class="color-pick gradient-red active"></div>
-                                <div id="gradient-blue" class="color-pick gradient-blue"></div>
-                                <div id="gradient-green" class="color-pick gradient-green"></div>
+                                <div id="red" class="color-pick gradient-red active"></div>
+                                <div id="blue" class="color-pick gradient-blue"></div>
+                                <div id="green" class="color-pick gradient-green"></div>
 
                             </div>
                             <div id="two-sample" class="tab-pane fade in">
@@ -262,9 +262,9 @@
                                 </select>
                                 <br>
 
-                                <div id="gradient-blue-to-red" class="color-pick gradient-blue-to-red active"></div>
-                                <div id="gradient-yellow-to-blue" class="color-pick gradient-yellow-to-blue"></div>
-                                <div id="gradient-red-to-green" class="color-pick gradient-red-to-green"></div>
+                                <div id="blue_red" class="color-pick gradient-blue-to-red active"></div>
+                                <div id="yellow_blue" class="color-pick gradient-yellow-to-blue"></div>
+                                <div id="red_green" class="color-pick gradient-red-to-green"></div>
                             </div>
                         </div>
 
