--- a/NetExplorer/templates/NetExplorer/experiment_dge_table.html
+++ b/NetExplorer/templates/NetExplorer/experiment_dge_table.html
@@ -7,7 +7,7 @@
                 <th>Gene Symbol</th>
                 <th>Condition 1</th>
                 <th>Condition 2</th>
-                <th>Fold Change</th>
+                <th>Log Fold Change</th>
                 <th>P-Value</th>
             </tr>
         </thead>
