--- a/NetExplorer/templates/NetExplorer/smesgene_card.html
+++ b/NetExplorer/templates/NetExplorer/smesgene_card.html
@@ -286,7 +286,9 @@
                 "order": [[ 1, "desc" ]]
             });
 
-            $("#transcripts-table").DataTable();
+            $("#transcripts-table").DataTable({
+                "order": [[ 0, "desc" ]]
+            });
         });
 </script>
 
